--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="favicon.svg" />
-    <title>kts-hw-5</title>
+    <title>GitHub Client</title>
   </head>
   <body></body>
 </html>
